<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!-- Mỗi phần tử của RecyclerView sẽ padding 8dp => margin của TextView cần 16dp -->
    <TextView
        android:id="@+id/search_title"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/search"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawableStart="@drawable/ic_search_black"
        android:drawablePadding="8dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textColorHint="@color/deep_gray"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="10dp"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/under_search_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/nav_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/track"
            android:textColor="@color/white"
            style="@style/font_medium"
            android:background="@color/search_selector_color" />

        <TextView
            android:id="@+id/nav_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/artist"
            android:textColor="@color/white"
            style="@style/font_medium"
            android:background="@color/search_selector_color" />

        <TextView
            android:id="@+id/nav_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/album"
            android:textColor="@color/white"
            style="@style/font_medium"
            android:background="@color/search_selector_color" />

        <TextView
            android:id="@+id/nav_youLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/you_liked"
            android:textColor="@color/white"
            style="@style/font_medium"
            android:background="@color/search_selector_color" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />
</LinearLayout>
</ScrollView>
