<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Mỗi phần tử của RecyclerView sẽ padding 8dp => margin của TextView cần 16dp -->
        <TextView
            android:id="@+id/greeting_text"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/morning"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/track_zone"
            style="@style/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/greeting_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/track_zone"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/track_zone"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/saved_track_zone"
            style="@style/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/track_recycler_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/saved_track"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_track_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/saved_track_zone"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/podcast_zone"
            style="@style/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saved_track_recycler_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/podcast_zone"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/podcast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/podcast_zone"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/artist_zone"
            style="@style/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/podcast_recycler_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/artist_zone"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artist_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artist_zone"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal" />

    </RelativeLayout>
</ScrollView>