<?xml version="1.0" encoding="utf-8"?><!-- Sử dụng CoordinatorLayout vì nó hỗ trợ  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Content FrameLayout -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true" />

        <!-- Music Player Bar -->
        <LinearLayout
            android:id="@+id/music_player_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@id/bottom_navigation_view"
            android:orientation="horizontal"
            android:background="#787575"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/music_thumbnail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_home"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/music_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Song Title"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/font_bold"/>

                <TextView
                    android:id="@+id/music_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist Name"
                    android:textColor="#AAA"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/fav_checked"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/fav_checked"
                android:src="@drawable/ic_like_checked"
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/fav_unchecked"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/fav_unchecked"
                android:src="@drawable/ic_like_unchecked"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_pause"
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/music_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-6dp"
            app:layout_constraintBottom_toBottomOf="@+id/music_player_bar"/>

        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_nav_gradient"
            android:fitsSystemWindows="true"
            app:itemActiveIndicatorStyle="@style/TransparentIndicatorStyle"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/bottom_nav_selector_color"
            app:itemPaddingBottom="10dp"
            app:itemPaddingTop="9dp"
            app:itemTextColor="@color/bottom_nav_selector_color"
            app:labelVisibilityMode="labeled"
            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
            app:menu="@menu/bottom_navigation_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
